add deps, bump v, publish

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyfin-sentiment
-version = 0.0.1
+version = 0.0.2
 author = Moritz Wilksch
 author_email = moritzwilksch@gmail.com
 description = A library for sentiment analysis of financial social media posts
@@ -19,6 +19,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requirements = 
+    joblib
+    scikit-learn
+    polars
 
 [options.packages.find]
 where = src
