--- a/pixi.toml
+++ b/pixi.toml
@@ -19,6 +19,7 @@ scikit-learn = ">=1.4.1.post1,<1.4.2"
 [feature.dev.dependencies]
 pytest = ">=7.2.0,<8.2"
 twine = ">=5.0.0,<5.1"
+build = ">=0.7.0,<0.8"
 
 [environments]
 dev = ["dev"]
